  of chat.txt
- added a handfull of log message domain, refer to Log.pm
- background color is now supported
- major changes to input and output systems, Windows users are getting a
  managed console and basic readline support.
- path finding code modifications, Windows users should get the new Tools.dll
  Linux users should rerun make.

==================
### OpenKore 1.2.1
==================

- Removed error handler; it seems to be causing problems.
- Storage fix.
- Fix a crash with swrite() when using Perl 5.8 on some Linux systems.
- Fix a divison by zero error.
- Fix creation of "logs" folder on Win32.


==================
### OpenKore 1.2.0
==================

NOTE: This release depends on:
* tablepack version 1.2.
* The Perl module Win32::Console::ANSI (only if you're not using the .exe)

New features:
- Console text is now colorized. The colors are defined in
  control\consolecolors.txt
- You can now specify more than one item in useSelf_item_#.
- New regular expression for detecting GM names. This will get rid of many
  false matches. Names like "LaGMaster" don't match anymore.
- If dcOnDisconnect is set to -1, kore will not respawn nor disconnect on
  death.
- mon_control.txt's auto-teleport flag can now have two values:
  1 = teleport when monster's on screen
  2 = teleport when monster hits you
- Ability to automatically switch configuration file after a while.
  See the "New/changed config option" section about autoConfChange.
- Ability to tell kore to never sit, even when overweight.
- Both party and deal requests can now be auto-accepted.
  See the "New/changed config option" section about paryAuto/dealAuto.
- "drop" and "storage get" can now drop/get more than 1 item. Example:
  storage get 4,7   (gets storage item 4 and 7)
  drop 3,5          (drops inventory item 3 and 5)
- dumpData() now also dumps raw data so you can see strings (just like in
  hex editors).
- Ability to open a warp portal. See the "New commands" section about
  'sl' and 'warp'.